# twist

./: .editorconfig  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs
.cargo/: audit.toml
.github/workflows/: merge-dependabot.yml  release.yml  security-audit.yml  workflow.yml
cli/: Cargo.toml  build.rs
cli/src/: lib.rs  logging.rs  path.rs
commands/: Cargo.toml
commands/src/: add_files.rs  apply_files.rs  exec_git.rs  init.rs  lib.rs  pull_from_remote.rs  push_to_remote.rs  remove_files.rs  update_repository.rs
common/: Cargo.toml
common/src/: lib.rs  path.rs
common/src/config/: mod.rs  toml.rs
common/src/files/: git.rs  mod.rs
fs/: Cargo.toml
fs/src/: file_manager.rs  lib.rs  path.rs  repository.rs
fs/src/repository/: git.rs  mod.rs
shared/: Cargo.toml
shared/src/: commands.rs  config.rs  lib.rs
shared/src/config/: mod.rs  toml.rs
src/: cli.rs  consts.rs  logging.rs  main.rs
src/cli/: mod.rs
src/cli/commands/: mod.rs
src/commands/: add.rs  add_files.rs  apply.rs  apply_files.rs  exec_git.rs  init.rs  init_repo.rs  mod.rs  pull.rs  pull_from_remote.rs  push.rs  push_to_remote.rs  remove.rs  remove_files.rs  update.rs  update_repository.rs
src/config/: mod.rs  toml.rs
src/data/: metadata.rs  mod.rs
src/files/: git.rs  mod.rs  path.rs
src/fs/: manager.rs  mod.rs  path.rs  paths.rs  repository.rs
