[workspace]
members = [
    "commands",
    "common"
]

[package]
name = "twist"
version = "0.1.3"
edition = "2021"
build = "build.rs"

[dependencies]
twist-common = { path = "./common" }
twist-commands =  { path = "./commands" }
anyhow = "1.0"
clap = { version = "4.0.7", features = ["derive", "env"] }
dirs = "4.0"
git2 = "0.14"
log = "0.4"
openssl = "0.10"
thiserror = "1.0"
toml = "0.5"
simplelog = "0.12"

[build-dependencies]
clap = { version = "4.0.7", features = ["derive", "env"] }
clap_complete = "4"
