[package]
name = "twist"
version = "0.1.3"
edition = "2021"
build = "build.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5.0", features = ["derive", "env"] }
dircpy = "0.3.15"
dirs = "5.0"
git2 = "0.18.2"
glob = "0.3"
log = "0.4"
openssl = "0.10"
serde = { version = "1.0", features = ["derive"] }
simplelog = "0.12"
subprocess = "0.2"
thiserror = "1.0"
time = { version = "0.3", features = ["local-offset"] }
toml = "0.8"

[build-dependencies]
clap = { version = "4.5.0", features = ["derive", "env"] }
clap_complete = "4"
