[package]
name = "twist"
version = "0.2.0"
edition = "2021"
build = "build.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5.23", features = ["derive", "env"] }
dircpy = "0.3.19"
dirs = "5.0"
git2 = "0.19.0"
glob = "0.3"
log = "0.4"
openssl = "0.10"
serde = { version = "1.0", features = ["derive"] }
simplelog = "0.12"
subprocess = "0.2"
thiserror = "2.0"
time = { version = "0.3", features = ["local-offset"] }
toml = "0.8"

[build-dependencies]
clap = { version = "4.5.23", features = ["derive", "env"] }
clap_complete = "4"
