[package]
name = "twist_cli"
version = "0.1.0"
edition = "2021"
build = "./build.rs"

[dependencies]
twist-common = { path = "../common" }
anyhow = "1.0"
clap = { version = "3.1", features = ["derive", "env"] }
dirs = "4.0"
simplelog = "0.11"
thiserror = "1.0"
shadow-rs = "0.11.0"

[build-dependencies]
shadow-rs = "0.11.0"
