[package]
name = "twist-cli"
version = "0.1.1"
edition = "2021"
build = "./build.rs"

[dependencies]
twist-common = { path = "../common" }
twist-commands = { path = "../commands" }
anyhow = "1.0"
clap = { version = "3.2.12", features = ["derive", "env"] }
dirs = "4.0"
simplelog = "0.12"
thiserror = "1.0"
shadow-rs = "0.14.0"

[build-dependencies]
shadow-rs = "0.14.0"
