[package]
name = "twist-cli"
version = "0.1.3"
edition = "2021"
build = "./build.rs"

[dependencies]
twist-common = { path = "../common" }
twist-commands = { path = "../commands" }
anyhow = "1.0"
clap = { version = "3.2.21", features = ["derive", "env"] }
dirs = "4.0"
simplelog = "0.12"
thiserror = "1.0"
shadow-rs = "0.16.1"

[build-dependencies]
shadow-rs = "0.16.1"
