[package]
name = "twist-common"
version = "0.1.3"
edition = "2021"

[dependencies]
anyhow = "1.0"
dircpy = "0.3.13"
dirs = "4.0"
git2 = "0.14"
glob = "0.3"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
time = { version = "0.3", features = ["local-offset"] }
openssl = "0.10"
toml = "0.5"